syntax = "proto3";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";

message Token {
  int64 id = 1 [ (gogoproto.jsontag) = "id" ];
  string plain_text = 2 [ (gogoproto.jsontag) = "content" ];
  string hash_data = 3 [ (gogoproto.jsontag) = "hash_data" ];
  bool trusty = 4 [ (gogoproto.jsontag) = "trusty" ];
  int64 trusty_at = 5 [ (gogoproto.jsontag) = "trusty_at" ];
  int64 created_at = 6 [ (gogoproto.jsontag) = "created_at" ];
  int64 updated_at = 7 [ (gogoproto.jsontag) = "updated_at" ];
  int64 deleted_at = 8 [ (gogoproto.jsontag) = "deleted_at" ];
}

message Stat {
  int64 id = 1 [ (gogoproto.jsontag) = "id" ];
  int64 succeed = 2 [ (gogoproto.jsontag) = "succeed" ];
  int64 failed = 3 [ (gogoproto.jsontag) = "failed" ];
  int64 created_at = 4 [ (gogoproto.jsontag) = "created_at" ];
  int64 updated_at = 5 [ (gogoproto.jsontag) = "updated_at" ];
}